# func_man

./: Cargo.toml  README.md
.github/workflows/: rust_build.yml
src/: main.rs  math.rs  util.rs
src/reducers/: ghost.rs  map.rs  mod.rs  pacman.rs
src/renderers/: floor.rs  ghost.rs  mod.rs  pacman.rs  pellet.rs  powerup.rs  wall.rs
